# DS_Simulator

./: CMakeLists.txt  Original-main.cpp.bk  main  main.cpp  shell.nix
Scripts/: build_release.sh
include/: DataStructureType.hpp  LinkedList.hpp  Node.hpp  Queue.hpp  Stack.hpp  StructureType.hpp
include/Searching/: Linear_search.cpp  search_algorithms.cpp
include/Sorting/: Bubble_sort.cpp  sorting  sorting.cpp
src/: Menue.cpp  Visualizer.cpp  main.cpp
